<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/btnGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginStart="99dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAll"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/radio_custom_background"
            android:text="@string/all"
            android:textColor="@drawable/selector_button_text"
            android:paddingHorizontal="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDisney"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/radio_custom_background"
            android:text="@string/disney"
            android:textColor="@drawable/selector_button_text"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNetflix"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/radio_custom_background"
            android:text="@string/netflix"
            android:textColor="@drawable/selector_button_text"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHULU"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/radio_custom_background"
            android:text="@string/hulu"
            android:textColor="@drawable/selector_button_text"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAmazon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/radio_custom_background"
            android:text="@string/amazon"
            android:textColor="@drawable/selector_button_text"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="16dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/btnGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/video_list" />


</androidx.constraintlayout.widget.ConstraintLayout>