<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_614"
    android:layout_height="@dimen/dimen_216"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/widget_background">

<TextView
    android:id="@+id/tv_title"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/string_24sp"
    android:layout_marginTop="@dimen/dimen_16"
    android:layout_marginStart="@dimen/dimen_32"
    android:textColor="@color/c_555555"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/navi"/>

<!--<androidx.appcompat.widget.AppCompatButton-->
<!--    android:id="@+id/lv_button1"-->
<!--    android:layout_width="@dimen/dimen_210"-->
<!--    android:layout_height="@dimen/dimen_100"-->
<!--    android:layout_marginStart="@dimen/dimen_32"-->
<!--    android:background="@drawable/widget_background_16radius"-->
<!--    android:backgroundTint="@color/c_F8F8F8"-->
<!--    android:drawableLeft="@drawable/home_2"-->
<!--    android:paddingLeft="@dimen/dimen_32"-->
<!--    android:text="@string/home"-->
<!--    android:textSize="@dimen/string_28sp"-->
<!--    android:textColor="@color/c_555555"-->
<!--    app:layout_constraintBottom_toBottomOf="parent"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/tv_title">-->

<!--</androidx.appcompat.widget.AppCompatButton>-->

    <LinearLayout
        android:id="@+id/lv_button1"
        android:orientation="horizontal"
        android:layout_width="@dimen/dimen_210"
        android:layout_height="@dimen/dimen_100"
        android:layout_marginStart="@dimen/dimen_32"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/widget_background_16radius"
        android:backgroundTint="@color/c_F8F8F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <ImageView
            android:layout_width="@dimen/dimen_40"
            android:layout_height="@dimen/dimen_40"
            android:src="@drawable/home_2"
            android:layout_marginRight="@dimen/dimen_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/string_28sp"
            android:text="@string/home"
            android:textColor="@color/c_555555"/>

    </LinearLayout>


    <!--<androidx.appcompat.widget.AppCompatButton-->
<!--    android:id="@+id/lv_button2"-->
<!--    android:layout_width="@dimen/dimen_210"-->
<!--    android:layout_height="@dimen/dimen_100"-->
<!--    android:layout_marginStart="@dimen/dimen_16"-->
<!--    android:background="@drawable/widget_background_16radius"-->
<!--    android:backgroundTint="@color/c_F8F8F8"-->
<!--    android:drawableLeft="@drawable/work"-->
<!--    android:paddingLeft="@dimen/dimen_32"-->
<!--    android:text="@string/work"-->
<!--    android:textSize="@dimen/string_28sp"-->
<!--    android:textColor="@color/c_555555"-->
<!--    app:layout_constraintBottom_toBottomOf="parent"-->
<!--    app:layout_constraintStart_toEndOf="@+id/lv_button1"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/tv_title">-->

<!--</androidx.appcompat.widget.AppCompatButton>-->
<!--    -->
    <LinearLayout
        android:id="@+id/lv_button2"
        android:orientation="horizontal"
        android:layout_width="@dimen/dimen_210"
        android:layout_height="@dimen/dimen_100"
        android:layout_marginStart="@dimen/dimen_16"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/widget_background_16radius"
        android:backgroundTint="@color/c_F8F8F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lv_button1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <ImageView
            android:layout_width="@dimen/dimen_40"
            android:layout_height="@dimen/dimen_40"
            android:src="@drawable/work"
            android:layout_marginRight="@dimen/dimen_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/string_28sp"
            android:text="@string/work"
            android:textColor="@color/c_555555"/>

    </LinearLayout>

<!--<ImageButton-->
<!--    android:layout_width="@dimen/dimen_100"-->
<!--    android:layout_height="@dimen/dimen_100"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    android:src="@drawable/search"-->
<!--    android:scaleType="centerCrop"-->
<!--    app:layout_constraintBottom_toBottomOf="parent"-->
<!--    android:background="@drawable/widget_background_16radius"-->
<!--    app:layout_constraintStart_toEndOf="@+id/lv_button2"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/tv_title"/>-->

    <LinearLayout
        android:id="@+id/bt_play"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_100"
        android:orientation="horizontal"
        android:background="@drawable/widget_background_16radius"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toEndOf="@+id/lv_button2">
        <ImageView
            android:layout_width="@dimen/dimen_40"
            android:layout_height="@dimen/dimen_40"
            android:src="@drawable/search"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>